# raytracer-in-c

./: CMakeLists.txt  README.md
src/: camera.c  camera.h  dielectric.c  dielectric.h  hit_record.c  hit_record.h  hittable.h  hittable_list.c  hittable_list.h  lambertian.c  lambertian.h  main.c  material.c  material.h  metal.c  metal.h  ray.c  ray.h  rng.c  rng.h  sphere.c  sphere.h  utils.c  utils.h  vec3.c  vec3.h
